--- a/ABEbox-docker-compose.yml
+++ b/ABEbox-docker-compose.yml
@@ -2,22 +2,22 @@ version: '3'
 
 services:
 
-        abebox_db:
-                image: mysql:latest
-                container_name: abebox_db
-                restart: always
-                ports:
-                        - "3307:3306"
-                environment:
-                        MYSQL_DATABASE: abebox
-                        MYSQL_ROOT_USER: root
-                        MYSQL_ROOT_PASSWORD: abebox
-                volumes:
+        #abebox_db:
+        #        image: mysql:latest
+        #        container_name: abebox_db
+        #        restart: always
+        #        ports:
+        #                - "3307:3306"
+        #        environment:
+        #                MYSQL_DATABASE: abebox
+        #                MYSQL_ROOT_USER: root
+        #                MYSQL_ROOT_PASSWORD: abebox
+        #        volumes:
                         #- ./sql/abebox_db.sql:/docker-entrypoint-initdb.d/init.sql
-                        - ./dbs/abebox_db:/var/lib/mysql
-                networks:
-                        abebox_network:
-                                ipv4_address: 172.25.0.3
+        #                - ./dbs/abebox_db:/var/lib/mysql
+        #        networks:
+        #                abebox_network:
+        #                        ipv4_address: 172.25.0.3
 
         abebox_webserver:
                 build:
@@ -25,8 +25,8 @@ services:
                         dockerfile: ABEbox_Dockerfile
                 image: abebox_webserver
                 container_name: abebox_webserver
-                depends_on:
-                        - abebox_db
+        #        depends_on:
+        #                - abebox_db
                 ports:
                         - "5002:5002"
                 networks:
